Quote section Completed

--- a/index.html
+++ b/index.html
@@ -42,5 +42,14 @@
                 And these things make up your mind and body, as well as your connection with the world beyond.
             </div>
         </div>
+
+        <div class="sectionTwo">
+            <div class="quote">
+                <em>“Peace is liberty in tranquility.”</em>
+            </div>  
+            <div class="quote2">
+                - Marcus Tullius Cicero.
+            </div>
+        </div>
     </body>
     </html>
