--- a/index.html
+++ b/index.html
@@ -39,17 +39,31 @@
             </div>
         </div>
             <div class="cardsDesc">
-                And these things make up your mind and body, as well as your connection with the world beyond.
+                And <mark>these things</mark> make up your mind and body, as well as your connection with the world beyond.
             </div>
         </div>
 
         <div class="sectionTwo">
             <div class="quote">
-                <em>“Peace is liberty in tranquility.”</em>
+                “Peace is <mark>liberty in tranquility.</mark>”
             </div>  
             <div class="quote2">
                 - Marcus Tullius Cicero.
             </div>
+        </div>
+
+        <div class="sectionThree">
+            <div class="modal">
+               <div class="mTextGrp">
+                <div class="mText1">It's time to unwind.</div>
+                <div class="mText2">Experience tranquility now.</div>
+               </div>
+               <button class="signup2">Sign Up!</button>
+            </div>
+        </div>
+
+        <div class="footer">
+            Made with ❤️ by Aarnav S.
         </div>
     </body>
     </html>
