--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         </div>
 
         <div class="footer">
-            Made with ❤️ by Aarnav S.
+            <div>Made with ❤️ by Aarnav S.</div>
+            <a href="https://www.freepik.com/free-photo/wooden-podium-display-with-leaf-shadow-composition-product-presentation_26929454.htm#query=minimalist%20illustrations&position=4&from_view=search">Picture Credits</a></div>
         </div>
     </body>
     </html>
