Alternate Color Scheme pushed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="sectionOne">
             <div class="cards">
                             <div class="card">⭐️<div class="cardtext">This is a Star.</div>
-                            <div class="card">🔥<div class="cardtext">This is Fire.</div>
+                            <div class="card">🔥<div class="cardtext">This is a Fire.</div>
                             <div class="card">❤️<div class="cardtext">This is a Heart.</div>
                             <div class="card">🌊<div class="cardtext">This is a Wave.</div>
                         </div>
@@ -63,8 +63,8 @@
         </div>
 
         <div class="footer">
-            <div>Made with ❤️ by Aarnav S.</div>
-            <a href="https://www.freepik.com/free-photo/wooden-podium-display-with-leaf-shadow-composition-product-presentation_26929454.htm#query=minimalist%20illustrations&position=4&from_view=search">Picture Credits</a></div>
+            <a href="https://github.com/AarnavSin">Made with ❤️ by Aarnav S.</a>
+            <a class="piclink" href="https://www.freepik.com/free-photo/wooden-podium-display-with-leaf-shadow-composition-product-presentation_26929454.htm#query=minimalist%20illustrations&position=4&from_view=search">Picture Credits</a></div>
         </div>
     </body>
     </html>
